fixed bug with 'delete account'prompt logic on mobile devices

--- a/Udemy/MERN_Fullstack_1/Main_Project/FRONTEND/src/shared/components/Navigation/SideDrawer.css
+++ b/Udemy/MERN_Fullstack_1/Main_Project/FRONTEND/src/shared/components/Navigation/SideDrawer.css
@@ -8,3 +8,7 @@
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
+
+.side-drawer.faded {
+  opacity: 0.3;
+}
